--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Material+Icons"
+              rel="stylesheet">
         <title>Javascript Excel</title>
     </head>
     <body>
-        <div id="app" class="container"></div>
+        <div id="app"></div>
     </body>
 </html>
